--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "heroku-postbuild": "npm install --prefix client && npm run build --prefix client"
+    "start": "node ./bin/www"
   },
   "engines": {
     "node": "12.18.0"
